# Strategy_Vector_Database

./: .gitignore  README.md  advising.py  data_gathering.py  funcs.py  main.py  pyproject.toml  requirements.txt  requirments.txt  test_data.json  test_embeddings.npy
.github/workflows/: python-app.yml
ETL/: migrate.py
configs/: sample_config.yml
scripts/: data_gathering.py  news_overview.py  query.py
tests/: integration_test.py
vector_db_package/: ETL_utils.py  advising_utils.py  database_utils.py  ollama_utils.py  schema_utils.py  utils.py
