[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vector_db_package"
version = "0.1.0"
description = "Vector database and advisor querying utilities"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["vector_db_package*"]